--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = None # add code here"
+    " # add code here"
    ]
   },
   {
