--- a/index.ipynb
+++ b/index.ipynb
@@ -321,11 +321,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[5] # add code here"
+    "countries[5]= 'USA' # add code here"
    ]
   },
   {
