--- a/index.ipynb
+++ b/index.ipynb
@@ -212,22 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Argentina', 'Mexico', 'USA', 'Morocco']"
+       "['Argentina', 'Mexico', 'USA']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kindof_neighbors = countries[2:6]\n",
+    "kindof_neighbors = countries[2:5]\n",
     "kindof_neighbors"
    ]
   },
