--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = l\n",
+    "num_of_repeats = len(countries)-len(unique_coun)\n",
     "num_of_repeats # 3"
    ]
   },
